# verus-mathspec-bench

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/workflows/: xtask-fmt.yml
benchmark/: Cargo.toml
benchmark/src/: lib.rs
benchmark/src/order/: lattice.rs  max.rs  mod.rs  notation.rs  setnotation.rs
benchmark/src/order/booleanalgebra/: basic.rs  defs.rs  mod.rs
benchmark/src/order/boundedorder/: basic.rs
benchmark/src/order/bounds/: defs.rs
benchmark/src/order/completelattice/: defs.rs
benchmark/src/order/defs/: mod.rs  partialorder.rs
benchmark/src/set/: mod.rs
benchmark/src/simple_graph/: basic.rs
src/: lib.rs
src/simple_graph/: basic.rs
xtask/src/: main.rs
