[package]
name = "verus-graph-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "e00fa8421522d08656d4421e76dc0cbb8eb385da" }
builtin = { git = "https://github.com/verus-lang/verus", rev = "e00fa8421522d08656d4421e76dc0cbb8eb385da" }
builtin_macros = { git = "https://github.com/verus-lang/verus", rev = "e00fa8421522d08656d4421e76dc0cbb8eb385da" }

[package.metadata.verus]
verify = true
