[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { git = "https://github.com/asterinas/verus", branch = "1.85.1" }
builtin = { git = "https://github.com/asterinas/verus", branch = "1.85.1" }
builtin_macros = { git = "https://github.com/asterinas/verus", branch = "1.85.1" }

[package.metadata.verus]
verify = true
